# thoth

./: .gitignore  .pre-commit-config.yaml  Brewfile  Brewfile.lock.json  Cargo.toml  Justfile  README.md  build.rs  flake.nix  install-dependencies  test.json  zellij-layout.kdl
helpers/: fake-clef-bass.ily  fake-clef-treble.ily
migrations/2024-03-24-135457_create_scores/: up.sql
migrations/2024-03-24-151931_create_scores/: down.sql  up.sql
migrations/2024-03-25-020507_create_files/: up.sql
migrations/2024-03-25-020507_create_included_files/: down.sql  up.sql
migrations/2024-03-25-020518_create_scores/: down.sql  up.sql
migrations/2024-03-25-133020_create_file_links/: down.sql  up.sql
migrations/2024-03-25-133020_create_linked_files/: down.sql  up.sql
migrations/2024-03-25-133020_create_score_included_files/: down.sql  up.sql
src/: commands.rs  config.rs  main.rs  models.rs  schema.rs
src/commands/: activate.rs  bump_version.rs  clean.rs  compile.rs  config.rs  create.rs  edit.rs  helpers.rs  info.rs  lilypond.rs  list.rs  open.rs  patterns.rs  scores.rs  sketch.rs  sqlite.rs  table.rs  templates.rs  update_path.rs  update_version.rs
src/commands/lilypond/: global.rs  install.rs  list.rs  list_remote.rs  uninstall.rs
src/commands/templates/: form.rs  lead.rs  piano.rs  single.rs
src/entities/: mod.rs  prelude.rs  score.rs
src/migrator/: m20240323_000001_create_score_table.rs  mod.rs
