[package]
name = "thoth"
version = "0.1.0"
edition = "2021"
description = "CLI for working with LilyPond files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
derivative = "2.2.0"
glob = "0.3.1"
once_cell = "1.17.1"
prettytable-rs = "0.10.0"
regex = "1.7.3"
serde = { version = "1.0.156", features = ["derive"] }
shellexpand = "3.0.0"
titlecase = "2.2.1"
toml = "0.7.3"
walkdir = "2.3.3"
