[package]
name = "thoth"
version = "0.1.0"
edition = "2021"
description = "CLI for managing LilyPond scores repositores"

[dependencies]
bat = "0.23.0"
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
convert_case = "0.6.0"
derivative = "2.2.0"
glob = "0.3.1"
indoc = "2.0.1"
inquire = "0.6.2"
miette = "5.9.0"
once_cell = "1.17.1"
owo-colors = "3.5.0"
regex = "1.7.3"
serde = { version = "1.0.156", features = ["derive"] }
shellexpand = "3.0.0"
skim = "0.10.4"
tabled = { version = "0.14.0", features = ["color"] }
titlecase = "2.2.1"
tokio = "1.28.2"
toml = "0.7.3"
users = "0.11.0"
walkdir = "2.3.3"
watchexec = "2.3.0"
watchexec-signals = "1.0.0"
