[package]
name = "thoth"
version = "0.1.0"
edition = "2021"
description = "CLI for managing LilyPond scores repositores"

[dependencies]
bat = "0.23.0"
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
convert_case = "0.6.0"
eyre = "0.6.12"
flate2 = "1.0.28"
glob = "0.3.1"
human-sort = "0.2.2"
indoc = "2.0.1"
itertools = "0.12.0"
miette = "7.0.0"
once_cell = "1.17.1"
owo-colors = "3.5.0"
regex = "1.7.3"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rusqlite = "0.31.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.108"
shellexpand = "3.0.0"
skim = "0.10.4"
tabled = { version = "0.14.0", features = ["color"] }
tar = "0.4.40"
titlecase = "2.2.1"
tokio = "1.28.2"
toml = "0.7.3"
users = "0.11.0"
walkdir = "2.3.3"
watchexec = "3.0.1"
watchexec-events = "2.0.1"
watchexec-signals = "2.1.0"
